crates/rumps-query/snapshots/scripts__350_range_collect.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  let xs: Array[Int] = Range.collect(1 .. 10)\n  write xs\n}\n"
---
[ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
