crates/rumps-query/snapshots/scripts__351_range_collect_map.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  let xs: Array[Int] = Range.collect(1 .. 10)\n  let ys = Mappable:map(x => x + 1, xs)\n  write ys\n}\n"
---
[ 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
