crates/rumps-query/snapshots/scripts__353_range_filterable_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; HKT `Filterable` rejects raw `Range`\n\nfun main() {\n  let xs = Filterable:filter(x => x > 3, 1 .. 10)\n  write xs\n}\n"
---
ERROR: type mismatch: expected `Range`, got `T[U]`
