crates/rumps-query/snapshots/scripts__354_range_foldable_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; HKT `Foldable` rejects raw `Range`\n\nfun main() {\n  let x = Foldable:reduce((a, x) => a + x, 0, 1 .. 10)\n  write x\n}\n"
---
ERROR: type mismatch: expected `Range`, got `T[U]`
