crates/rumps-query/snapshots/scripts__359_range_as_array.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  let xs: Array[Int] = (1 .. 10) as Array[Int]\n  write xs\n}\n"
---
[ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
