crates/rumps-query/snapshots/scripts__35_read_convert.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: Fallible type conversion operator (read)\n; Tests fallible conversions that return `Result[T, String]`\n\nfun main() {\n  ; === String -> Int ===\n\n  ; Success case\n  let s1 = \"42\"\n  let r1 = s1 read Int\n  write r1\n  ; Expected: Result.Ok(42)\n\n  ; Negative number\n  let s2 = \"-123\"\n  let r2 = s2 read Int\n  write r2\n  ; Expected: Result.Ok(-123)\n\n  ; Failure case (not a valid int)\n  let s3 = \"hello\"\n  let r3 = s3 read Int\n  write r3\n  ; Expected: Result.Err(...)\n\n  ; Failure case (float string -> int)\n  let s4 = \"3.14\"\n  let r4 = s4 read Int\n  write r4\n  ; Expected: Result.Err(...)\n\n  ; === String -> Float ===\n\n  ; Success case\n  let f1 = \"3.14\"\n  let rf1 = f1 read Float\n  write rf1\n  ; Expected: Result.Ok(3.14)\n\n  ; Integer string to float\n  let f2 = \"42\"\n  let rf2 = f2 read Float\n  write rf2\n  ; Expected: Result.Ok(42)\n\n  ; Negative float\n  let f3 = \"-2.5\"\n  let rf3 = f3 read Float\n  write rf3\n  ; Expected: Result.Ok(-2.5)\n\n  ; Failure case\n  let f4 = \"not-a-number\"\n  let rf4 = f4 read Float\n  write rf4\n  ; Expected: Result.Err(...)\n\n  ; === Int -> Bool ===\n\n  ; Zero -> false\n  let b1 = 0 read Bool\n  write b1\n  ; Expected: Result.Ok(false)\n\n  ; One -> true\n  let b2 = 1 read Bool\n  write b2\n  ; Expected: Result.Ok(true)\n\n  ; Invalid int (not 0 or 1)\n  let b3 = 42 read Bool\n  write b3\n  ; Expected: Result.Err(...)\n\n  let b4 = -1 read Bool\n  write b4\n  ; Expected: Result.Err(...)\n\n  ; === Chained operations ===\n\n  ; Chain read with as\n  let chain = (\"42\" read Int) as String\n  write chain\n  ; Expected: Result.Ok(42)\n\n  ; === Read with expressions ===\n\n  let concat = \"{\"1\"}{\"23\"}\"\n  let parsed = concat read Int\n  write parsed\n  ; Expected: Result.Ok(123)\n\n  write \"Fallible read test complete\"\n}\n"
---
Result.Ok(42)
Result.Ok(-123)
Result.Err("invalid integer: hello")
Result.Err("invalid integer: 3.14")
Result.Ok(3.14)
Result.Ok(42.0)
Result.Ok(-2.5)
Result.Err("invalid float: not-a-number")
Result.Ok(false)
Result.Ok(true)
Result.Err("expected 0 or 1 for Bool, got 42")
Result.Err("expected 0 or 1 for Bool, got -1")
"Result.Ok(42)"
Result.Ok(123)
"Fallible read test complete"
