crates/rumps-query/snapshots/scripts__360_range_array_conversions.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  let xs: Array[Int] = (3 .. 0) as Array[Int]\n  write xs\n\n  let up = ([1, 2, 3] read Range)!\n  write up\n\n  let down = ([3, 2, 1] read Range)!\n  write down\n}\n"
---
[ 3, 2, 1 ]
1 ..= 3
3 ..= 1
